<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="noteViewModel"
            type="com.srbh.wander.viewmodel.NoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toEndOf="@id/guideline7"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/add_a_note"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/topic_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/topic_label"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toEndOf="@id/guideline7"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:startIconCheckable="true"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={noteViewModel.topic}"
                android:gravity="top"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:hint="@string/description_label"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toEndOf="@id/guideline7"
            app:layout_constraintTop_toBottomOf="@id/topic_layout"
            app:layout_constraintBottom_toTopOf="@id/guideline9"
            app:startIconCheckable="true"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={noteViewModel.description}"
                android:gravity="top"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_note_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_baseline_add_24"
            android:drawableTint="@color/white"
            android:text="@string/add"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline9"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toEndOf="@id/guideline7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
